--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--css -->
     <title>BeCreative|Home Page</title>
     <link rel="stylesheet" href="style.css">
@@ -93,14 +94,14 @@
     <section id="about">
       <div class="container">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 col-sm-12 col-sx-12">
             <h2>About Us</h2>
             <div class="about-content">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
             <button type="button" class="btn btn-primary">Read More>></button>
           </div>
-          <div class="col-md-6 skils-bar">
+          <div class="col-md-6 col-sm-12 col-sx-12 skils-bar">
             <p>Adobe Photoshop</p>
             <div class="progress">
                   <div class="progress-bar" style="width:80%"> 80%</div>
