--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
           <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item ">
-                    <a class="nav-link" href="#">HOME</a>
+                    <a class="nav-link" href="#top">HOME</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">ABOUT US</a>
+                    <a class="nav-link" href="#about">ABOUT US</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">SERVICES</a>
+                    <a class="nav-link" href="#services">SERVICES</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">OUR TEAM</a>
+                    <a class="nav-link" href="#team">OUR TEAM</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">PRICE PLANS</a>
+                    <a class="nav-link" href="#price">PRICE PLANS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">TESTIMONIALS</a>
+                    <a class="nav-link" href="#testimonials">TESTIMONIALS</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">CONTACT</a>
+                    <a class="nav-link" href="#contact">CONTACT</a>
                   </li>
                 </ul>
           </div>
@@ -246,5 +246,233 @@
 
         </div>
   </section>
+
+  <!-- priceplan -->
+
+  <section id="price">
+    <div class="container">
+      <h1>Price Plan</h1>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="single-price">
+            <div class="price-head">
+              <h2>Free</h2>
+              <p>$0/<span>month</span></p>
+            </div>
+            <div class="price-content">
+              <ul>
+                <li><i class="fa fa-check-circle"></i>5GB Space</li>
+                <li><i class="fa fa-check-circle"></i>10GB Bandwidth</li>
+                <li><i class="fa fa-times-circle"></i>15 Email account</li>
+                <li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+                <li><i class="fa fa-times-circle"></i>Unlimited Support</li>
+              </ul>
+
+            </div>
+            <div class="price-btn">
+              <a class="buy-btn" href="#">Join Free</a>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-3">
+          <div class="single-price">
+            <div class="price-head">
+              <h2>Start Up</h2>
+              <p>$10/<span>month</span></p>
+            </div>
+            <div class="price-content">
+              <ul>
+                <li><i class="fa fa-check-circle"></i>10GB Space</li>
+                <li><i class="fa fa-check-circle"></i>100GB Bandwidth</li>
+                <li><i class="fa fa-check-circle"></i>15 Email account</li>
+                <li><i class="fa fa-times-circle"></i>Unlimited Domain</li>
+                <li><i class="fa fa-times-circle"></i>Unlimited Support</li>
+              </ul>
+
+            </div>
+            <div class="price-btn">
+              <a class="buy-btn" href="#">Join Free</a>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-3">
+          <div class="single-price">
+            <div class="price-head">
+              <h2>Business</h2>
+              <p>$50/<span>month</span></p>
+            </div>
+            <div class="price-content">
+              <ul>
+                <li><i class="fa fa-check-circle"></i>20GB Space</li>
+                <li><i class="fa fa-check-circle"></i>200GB Bandwidth</li>
+                <li><i class="fa fa-check-circle"></i>50 Email account</li>
+                <li><i class="fa fa-check-circle"></i>Unlimited Domain</li>
+                <li><i class="fa fa-times-circle"></i>Unlimited Support</li>
+              </ul>
+
+            </div>
+            <div class="price-btn">
+              <a class="buy-btn" href="#">Join Free</a>
+            </div>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-3">
+          <div class="single-price">
+            <div class="price-head">
+              <h2>Advanced</h2>
+              <p>$50/<span>month</span></p>
+            </div>
+            <div class="price-content">
+              <ul>
+                <li><i class="fa fa-check-circle"></i>100GB Space</li>
+                <li><i class="fa fa-check-circle"></i>Unlimited Bandwidth</li>
+                <li><i class="fa fa-check-circle"></i>Unlimited Email account</li>
+                <li><i class="fa fa-check-circle"></i>Unlimited Domain</li>
+                <li><i class="fa fa-check-circle"></i>Unlimited Support</li>
+              </ul>
+
+            </div>
+            <div class="price-btn">
+              <a class="buy-btn" href="#">Join Free</a>
+            </div>
+
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- testimonials -->
+  <section id="testimonials">
+    <div class="container">
+      <h1>Testomonials</h1>
+      <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod </p>
+      <div class="row">
+        <div class="col-md-4 text-center">
+          <div class="profile ">
+            <img src="./image/profile3.jpg" class="user">
+            <blockquote>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi u
+
+            </blockquote>
+            <h3>Ashu Kumar <span>Co-Founder at ABC Limited.</span></h3>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-4 text-center">
+          <div class="profile ">
+            <img src="./image/profile2.jpg" class="user">
+            <blockquote>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi u
+
+            </blockquote>
+            <h3>Jessica Frendis <span>Co-Founder at ABC Limited.</span></h3>
+
+          </div>
+
+        </div>
+
+        <div class="col-md-4 text-center">
+          <div class="profile ">
+            <img src="./image/team3.jpg" class="user">
+            <blockquote>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi u
+
+            </blockquote>
+            <h3>Erin Roy <span>Co-Founder at ABC Limited.</span></h3>
+
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+
+  </section>
+
+  <!-- get in touch -->
+
+  <section id="contact">
+    <div class="container">
+      <h1>Get In Touch</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <form class="contact-form" action="index.html" method="post">
+              <div class="form-group">
+                <input type="text"  class="form-control" placeholder="Your Name"name="" value="">
+
+              </div>
+              <div class="form-group">
+                <input type="number"  class="form-control" placeholder="Phone Number"name="" value="">
+
+              </div>
+              <div class="form-group">
+                <input type="email"  class="form-control" placeholder="Email Address"name="" value="">
+
+              </div>
+              <div class="form-group">
+                <textarea class="form-control"  rows="4" cols="80" placeholder="Message"></textarea>
+
+              </div>
+
+              <button type="submit" class="btn btn-primary">Send Message</button>
+
+          </form>
+
+        </div>
+
+        <div class="col-md-6 contact-info">
+          <div class="follow"><i class="fa fa-map-marker"></i>
+            <b>Address:</b>XYZ Street,New York,USA
+          </div>
+          <div class="follow"><i class="fa fa-phone"></i>
+            <b>Phone:</b>+1 0123456789
+          </div>
+          <div class="follow"><i class="fa fa-envelope"></i>
+            <b>Email:</b>xyz@gmail.com
+          </div>
+
+          <div class="follow"><label><b>Get Social:</b></label>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+            <a href="#"><i class="fa fa-youtube-play"></i></a>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+          </div>
+
+
+        </div>
+
+      </div>
+
+    </div>
+
+  </section>
+
+  <!-- footer -->
+
+  <section id="footer">
+    <div class="container text-center">
+      <p>Made for Practice Purpose</p>
+
+    </div>
+
+  </section>
+  <script src="./smooth-scroll.js"></script>
+  <script>
+	var scroll = new SmoothScroll('a[href*="#"]');
+</script>
   </body>
 </html>
